# rest-api-django

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  README.md  hello.py  log.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
app/: fibonacci.py  hello.py
tests/: test_fibonacci.py  test_hello.py
tests/fibonacci/: test_fibonacci.py
tests/slow/: test_sleep_7.py
