[project]
name = "rest-api-django"
version = "0.1.0"
description = "A project that builds a Django based REST API from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.0.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
]

[tool.pymarkdown]
plugins.md013.enabled = true
plugins.md013.line_length = 120
plugins.md013.ignore_code_blocks = true
extensions.front-matter.enabled = true
