[project]
name = "rest-api-django"
version = "0.1.0"
description = "A project that builds a Django based REST API from scratch"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-watcher>=0.4.3",
    "pytest-xdist[psutil]>=3.6.1",
]

[tool.pymarkdown]
plugins.md013.enabled = false
extensions.front-matter.enabled = true

[tool.pytest.ini_options]
testpaths = ["tests"]
#addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80 --strict-markers --import-mode=importlib --durations=5 --last-failed -n logical"
pythonpath = ["."]

[tool.coverage.run]
omit = ["tests/*"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.vulture]
exclude = [".venv"]
paths = ["."]
